--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@fullcalendar/vue3": "^6.1.10",
     "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.5.0",
     "date-fns": "^2.30.0",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.38",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
